Restore build flags to normal, in an attempt to isolate a Travis CI failure